--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
                     <p>Huawei</p>
                     <span>2024</span>
                 </div>
+
+                <div class="cert-card animate-on-scroll">
+                    <img src="https://images.credly.com/images/af8c6b4e-fc31-47c4-8dcb-eb7a2065dc5b/I2CS__1_.png" alt="Cisco Certified">
+                    <h3>#GICT2025_Introduction to Cybersecurity</h3>
+                    <p>Cisco</p>
+                    <span>2025</span>
+                </div>
             </div>
         </section>
         
