--- a/index.html
+++ b/index.html
@@ -97,15 +97,16 @@
             
             <div class="projects-grid">
                 <div class="project-card animate-on-scroll" data-category="cloud">
-                    <div class="project-image" style="background-image: url('https://via.placeholder.com/600x400')"></div>
+                    <div class="project-image" style="background-image: url('https://www.google.com/imgres?q=road%20accident%20analyzer%20pic&imgurl=https%3A%2F%2Fassets.skyfilabs.com%2Fimages%2Fblog%2Froad-accident-analysis-using-machine-learning.webp&imgrefurl=https%3A%2F%2Fwww.skyfilabs.com%2Fproject-ideas%2Froad-accident-analysis-using-machine-learning&docid=WHgj_lqkyKbohM&tbnid=bKDB2rTK1IDMMM&vet=12ahUKEwiv24qgn5yNAxWdV6QEHf-vPCcQM3oECE8QAA..i&w=728&h=485&hcb=2&ved=2ahUKEwiv24qgn5yNAxWdV6QEHf-vPCcQM3oECE8QAA/600x400')"></div>
                     <div class="project-details">
-                        <h3>Coming soon</h3>
+                        <h3>Kenya Road Accidents Analyzer</h3>
                         <div class="project-tech">
-                            <span>fetching</span>
-                            <span>fetching</span>
-                            <span>fetching</span>
+                            <span>Python</span>
+                            <span>JavaScript</span>
+                            <span>CSS</span>
+                            <span>HTML</span>
                         </div>
-                        <p>will be posted as soon as possibe.</p>
+                        <p> a machine learning model for analyzing accidents in kenya.</p>
                         <a href="#" class="btn">fetching</a>
                     </div>
                 </div>
