--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <span>HTML</span>
                         </div>
                         <p> a machine learning model for analyzing accidents in kenya.</p>
-                        <a href="#" class="btn">fetching</a>
+                        <a href="https://github.com/Warrenchris/road-accident-analyzer" class="btn">Visit Site</a>
                     </div>
                 </div>
                 
