--- a/index.html
+++ b/index.html
@@ -112,16 +112,17 @@
                 </div>
                 
                 <div class="project-card animate-on-scroll" data-category="security">
-                    <div class="project-image" style="background-image: url('https://via.placeholder.com/600x400')"></div>
+                    <div class="project-image" style="background-image: url('https://easync.syntacticsinc.com/blog/car-rental-system-managing-your-business//600x400')"></div>
                     <div class="project-details">
-                        <h3>Coming soon</h3>
+                        <h3>Flask-Based Car Rental Platform </h3>
                         <div class="project-tech">
-                            <span>fetching</span>
-                            <span>fetching</span>
-                            <span>fetching</span>
+                            <span>Python</span>
+                            <span>flask</span>
+                            <span>HTML</span>
+                            <span>CSS/Js</span>
                         </div>
-                        <p>will be posted as soon as possibe.</p>
-                        <a href="#" class="btn">fetching</a>
+                        <p>web application built with Flask, enabling users to book, return, and pay for cars while providing admins with vehicle, user, and payment management features.</p>
+                        <a href="https://github.com/Warrenchris/python-car-rental-system" class="btn">Visit Site</a>
                     </div>
                 </div>
                 
